--- a/property_inspector/property_inspector.html
+++ b/property_inspector/property_inspector.html
@@ -28,7 +28,7 @@
 			<label for="txtShinyValue"><span></span>Shiny</label>
 		</div>
 		<div class="sdpi-item" id="duration_value">
-			<div class="sdpi-item-label">Interaction Duration (ms)</div>
+			<div class="sdpi-item-label">Reaction Duration (ms)</div>
 			<input id="txtDurationValue" class="sdpi-item-value" type="number" inputmode="numeric" pattern="[0-9]*" placeholder="Enter duration" onchange="setSettings(event.target.value, 'Duration')" />
 		</div>
 
